src/test/fail/call_wrong_arg_type.ly
<@lily method m(integer a):nil {} m("a") @>
